--- a/style/works.css
+++ b/style/works.css
@@ -1,8 +1,8 @@
 .gallery {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(350px, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  -ms-grid-columns: (minmax(350px, 1fr)) [auto-fill];
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   width: 100%;
 }
 
@@ -17,7 +17,7 @@
   transition: all 0.4s ease-in-out;
   cursor: pointer;
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
   height: 350px;
 }
 
@@ -34,11 +34,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .img-window img {
@@ -53,10 +53,11 @@
   padding: 6px 10px;
   border-radius: 4;
   background-color: #111111;
-  position: absolute;
+  position: static;
   top: 48vh;
   z-index: 700;
   width: 70px;
+  height: 25px;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   cursor: pointer;
