--- a/style/works.scss
+++ b/style/works.scss
@@ -1,66 +1,70 @@
+.object {
+  margin-bottom: 15vh;
+}
+
 .gallery {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-	width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  width: 100%;
 }
 
 .galleryImage {
-	overflow: hidden;
-	margin: 0 1rem;
+  overflow: hidden;
+  margin: 0 1rem;
 }
 
 .galleryImage img {
-	overflow: hidden;
-	transition: all 0.4s ease-in-out;
-	cursor: pointer;
-	object-fit: contain;
-	height: 350px;
+  overflow: hidden;
+  transition: all 0.4s ease-in-out;
+  cursor: pointer;
+  object-fit: contain;
+  height: 350px;
 }
 
 .img-window {
-	width: 100vw;
-	height: 100vh;
-	background-color: rgba(0, 0, 0, 0.8);
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 100;
-	cursor: pointer;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .img-window img {
-	z-index: 500;
-	max-height: 80vh;
-	max-width: 80vw;
+  z-index: 500;
+  max-height: 80vh;
+  max-width: 80vw;
 }
 
 .next-btn,
 .prev-btn {
-	display: block;
-	padding: 6px 10px;
-	border-radius: 4;
-	background-color: #111111;
-	position: absolute;
-	top: 48vh;
-	z-index: 700;
-	width: 70px;
-	font-family: Arial, Helvetica, sans-serif;
-	color: white;
-	cursor: pointer;
-	text-transform: uppercase;
+  display: block;
+  padding: 6px 10px;
+  border-radius: 4;
+  background-color: #111111;
+  position: absolute;
+  top: 48vh;
+  z-index: 700;
+  width: 70px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  cursor: pointer;
+  text-transform: uppercase;
 }
 
 .next-btn {
-	left: calc(88vw - 70px);
+  left: calc(88vw - 70px);
 }
 .prev-btn {
-	left: 12vw;
+  left: 12vw;
 }
 
 .prev-btn,
 .next-btn:hover {
-	opacity: 0.8;
+  opacity: 0.8;
 }
