--- a/style/index.css
+++ b/style/index.css
@@ -42,7 +42,7 @@ body {
   width: 20vw;
   position: relative;
   z-index: 20;
-  color: lightgrey;
+  color: rgb(238, 242, 215);
   font-size: 35px;
   top: 35px;
   left: 35px;
@@ -176,7 +176,7 @@ body {
   }
 }
 main {
-  min-width: 800px;
+  min-width: 500px;
   width: 80vw;
   margin: 0 auto;
   display: flex;
@@ -189,6 +189,7 @@ main {
   margin: 3vh 0 10vh;
   height: auto;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   background-color: white;
   border: solid 3px rgb(15, 88, 15);
@@ -197,7 +198,6 @@ main {
 }
 
 .aboutGallery {
-  margin: 3vh 0 10vh;
   height: auto;
   display: flex;
   justify-content: center;
@@ -210,7 +210,7 @@ main {
 .aboutText {
   font-family: "Montserrat", sans-serif;
   line-height: 1.7;
-  padding: 0 2vw;
+  padding: 1vh 2vw;
 }
 
 p {
@@ -221,6 +221,7 @@ h2 {
   font-size: 1.1rem;
   text-align: left;
   color: #18150d;
+  margin-left: 3vw;
 }
 
 .about .aboutPhotoCont {
@@ -401,4 +402,36 @@ h2 {
 
 .footer nav ul li a:hover {
   color: #fab1a4;
+}
+
+@media screen and (max-width: 500px) {
+  main {
+    max-width: 500px;
+    min-width: 250px;
+  }
+  main .about {
+    flex-direction: column;
+  }
+  main .about .aboutPhotoCont {
+    padding: 2vh;
+  }
+  main .socialApprove {
+    flex-direction: column;
+  }
+  main .socialApprove .socialSection {
+    width: 100%;
+  }
+  main .socialApprove .socialSection:first-of-type {
+    margin-bottom: 15vh;
+  }
+  .footer {
+    flex-direction: column;
+    margin: 0 auto;
+    width: 100vw;
+    min-width: 250px;
+  }
+}
+.galleryImage img {
+  min-height: 200px;
+  min-width: 250px;
 }/*# sourceMappingURL=index.css.map */
